--- a/EBhavCultureDailyPrayersPricingGraphy.html
+++ b/EBhavCultureDailyPrayersPricingGraphy.html
@@ -108,7 +108,7 @@
         </section>
     </div> -->
 
-<div id="1734436339700d" data-cat="107" class="is-section is-section-100 is-box is-bg-grey" style="background-color: #f0f5f8;">
+<!-- <div id="1734436339700d" data-cat="107" class="is-section is-section-100 is-box is-bg-grey" style="background-color: #f0f5f8;"> -->
         <h1 class="priceMainHeading">Our Pricing</h1>
 
         <div data-coursid="67616a29f8e1af6f8cfe2f6c" class="courselandingpage toggleBtnMainDiv">
@@ -223,6 +223,7 @@
                 </ul>
             </div>
         </div>
+        <!-- </div> -->
 
 <!-- <div id="1734170397301d" data-cat="1" class="is-section is-section-100 is-box is-bg-grey">
         <section class="productsFAQs">
